# dre

./: .env  Cargo.toml  README.md  app.db
src/: main.rs  router.rs  ws.rs
src/app/: mod.rs
src/controller/: api_message.rs  api_message_doc.rs  api_message_records.rs  api_message_report.rs  api_message_script.rs  api_server.rs  mod.rs
src/entity/: api_message.rs  api_message_doc.rs  api_message_script_list.rs  api_message_test_record.rs  api_server.rs  mod.rs  prelude.rs
src/templates/: diff2html.min.css  index.html  playground.html  report.html  test.html
src/templates/_app/: version.json
src/templates/_app/immutable/assets/: 0.26f92f89.css  5.3ebcc7ec.css
src/templates/_app/immutable/chunks/: ExportToExcel.ebc8f526.js  ProgressBar.svelte_svelte_type_style_lang.bd7f7619.js  apimessage.aa0364f9.js  apiserver.78f50cf1.js  index.11beda0a.js  index.e57c2893.js  scheduler.aa2ef5b9.js  singletons.0dacd9f0.js  singletons.4136442b.js  singletons.78b44454.js  singletons.b7240da3.js  singletons.de9a0a96.js  stores.369d9d6c.js
src/templates/_app/immutable/entry/: app.39e5d1af.js  (+9 more)
web/: .gitignore  package-lock.json  package.json  set-up.bat  tailwind.config.cjs  vite.config.ts
web/src/: app.d.ts  app.html
web/src/lib/: ExportToExcel.ts  index.ts  stores.ts
web/src/lib/api/: apimessage.ts  apiserver.ts  config.ts
web/src/lib/components/: apiServer.svelte  diffresult.svelte  newDoc.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/playground/: +page.svelte
web/src/routes/report/: +page.svelte
web/src/routes/test/: +page.svelte
(+19 files in other folders)
