[package]
name = "dreams_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = {version = "1.35.0" ,features = ["macros", "rt-multi-thread"] }
salvo = {version = "0.63.1",features = ["affix", "serve-static","oapi", "websocket"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = {version = "1.0.192", features = ["derive"] }

sea-orm = {version = "0.12.9", features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
  # "sqlx-postgres",
  # "sqlx-mysql",
] }
async-std = {version = "1.11.0",features = ["attributes", "tokio1"] }
tera = "1.19.1"
rust-embed = "8.1.0"
